--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   permission_handler: ^11.2.0
   firebase_database: ^10.4.0
   location: ^5.0.3
+  geocoding: ^2.1.1
 
 dev_dependencies:
   flutter_test:
